| Bug #25743 | If initial_size less than undo_buffer_size (for LG) then ndbd nodes are crashed | ||
|---|---|---|---|
| Submitted: | 21 Jan 2007 19:03 | Modified: | 23 Mar 2007 11:28 |
| Reporter: | Serge Kozlov | ||
| Status: | Closed | ||
| Category: | Server: ClusterDD | Severity: | S2 (Serious) |
| Version: | 5.1.15-bk | OS: | Linux (Linux FC4 64bit) |
| Assigned to: | Bugs System | Target Version: | |
[21 Jan 2007 19:03]
Serge Kozlov
[23 Jan 2007 4:06]
Jonas Oreland
Hi, interesting... 1) you did ofcourse try with other sizes matching decription e.g initial_size=10m undo_buffer_size=11m or similar 2) could you attatch error log + tracefile anyway... (so I can look here online...) /Jonas
[8 Mar 2007 10:35]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/21469 ChangeSet@1.2441, 2007-03-08 17:33:30+08:00, gni@dev3-221.dev.cn.tlan +1 -0 BUG#25743 If undo_buffer_size (for LG) greater than the inital shared memory (default 20M), ndbd nodes are crashed
[8 Mar 2007 10:48]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/21470 ChangeSet@1.2441, 2007-03-08 17:47:13+08:00, gni@dev3-221.dev.cn.tlan +1 -0 BUG#25743 If undo_buffer_size (for LG) greater than the inital shared memory (default 20M), ndbd nodes are crashed
[9 Mar 2007 4:41]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/21551
[9 Mar 2007 9:54]
Guangbao Ni
Approved by Jonas, merge into mysql-5.1-new-ndb-bj.
[16 Mar 2007 6:42]
Jon Stephens
Documented fix for ndb-6.1.5 (MCCGE) release.
[22 Mar 2007 21:03]
Mads Martin Joergensen
Fixed in 5.1.17
[23 Mar 2007 11:28]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at
http://dev.mysql.com/doc/en/installing-source.html
Documented fix in 5.1.17 changelog.
