BUG#25743 If undo_buffer_size (for LG) greater than the inital shared memory (default 20M), ndbd nodes are crashed

storage/ndb/src/kernel/vm/Pool.hpp:
  Only when m_pool.seize() return true, the ptr.i and ptr.p is assigned the ri
  ght value, or else the parameter ptr should be "not touched"